agregado listado de productos con gridverticalmanager

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:gravity="center"
         android:text="Mama Help"
         android:textColor="#dc58a1"
-        android:textSize="35dp"
+        android:textSize="40dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/emailLayout"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +91,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/login_button"
         android:text="Iniciar Sesión"
-        android:textColor="#d9d6d6"
+        android:textColor="#efecec"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
