--- a/app/src/main/res/drawable/welcome_button.xml
+++ b/app/src/main/res/drawable/welcome_button.xml
@@ -11,4 +11,13 @@
         </shape>
     </item>
 
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp" />
+            <solid android:color="@color/buttonWelcomeColorPressed" />
+            <padding android:bottom="10.0dip" android:left="10.0dip" android:right="10.0dip" android:top="10.0dip" />
+            <stroke android:width="1.5dip" android:color="#222" />
+        </shape>
+    </item>
+
 </selector>
